<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/noGPSalertTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/dialog_color"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/near"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/noGPStv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/locServ"
        android:textColor="@color/bar_color" />

    <Button
        android:id="@+id/noGPSsubmitBtn"
        style="@android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_color"
        android:onClick="noGPSsub"
        android:text="@string/sub"
        android:textColor="@android:color/white" />

</LinearLayout>