<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieRatingsActivity" >

    <TextView
        android:id="@+id/movTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/theme_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/criticTitle"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/critic"
            android:textColor="@color/theme_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/audienceTitle"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/criticTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/audience"
            android:textColor="@color/theme_color"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/ratingCritic"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:textColor="@color/theme_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ratingAudience"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ratingCritic"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:textColor="@color/theme_color"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/synopsisTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/synopsis"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/synopsis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/theme_color"
        android:textSize="14sp" />

</LinearLayout>
